--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     ]
   },
   "config": {
-		"commitizen": {
-			"path": "cz-conventional-changelog"
-		}
-	},
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -21,12 +21,16 @@
     "commit": "git add . && yarn git-cz"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "emotion-reset": "^3.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
-		"@commitlint/config-conventional": "^17.1.0",
+    "@commitlint/config-conventional": "^17.1.0",
     "@types/node": "^18.6.3",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
@@ -34,11 +38,11 @@
     "@typescript-eslint/parser": "^5.31.0",
     "@vitejs/plugin-react": "^2.0.0",
     "commitizen": "^4.2.5",
-		"cz-conventional-changelog": "^3.3.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.21.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-react-app": "^7.0.1",
-		"eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
